commit translated contents

--- a/Teams/upgrade-workshops-landing-page.yml
+++ b/Teams/upgrade-workshops-landing-page.yml
@@ -1,45 +1,51 @@
 ### YamlMime:Hub
 title: Семинары по планированию перехода на Teams
-summary: 'Присоединяйтесь к нашей серии интерактивных семинаров по планированию перехода, где мы делимся рекомендациями, советами и ресурсами, помогающими спланировать и реализовать переход на Teams. Для оптимального взаимодействия начните с сеанса Планирование перехода ниже. Щелкните название любого совещания, чтобы зарегистрировать его.'
+summary: Присоединяйтесь к нашей серии интерактивных семинаров по планированию перехода, где мы делимся рекомендациями, советами и ресурсами, помогающими спланировать и реализовать переход на Teams. Для оптимального взаимодействия начните с сеанса Планирование перехода ниже. Щелкните любой заголовок семинара, чтобы зарегистрироваться.
 brand: teams
 metadata:
   title: Семинары по планированию перехода на Teams
-  description: 'Присоединяйтесь к нашей серии интерактивных семинаров по планированию перехода, где мы делимся рекомендациями, советами и ресурсами, помогающими спланировать и реализовать переход на Teams. Для оптимального взаимодействия начните с сеанса Планирование перехода ниже. Щелкните название любого совещания, чтобы зарегистрировать его.'
+  description: Присоединяйтесь к нашей серии интерактивных семинаров по планированию перехода, где мы делимся рекомендациями, советами и ресурсами, помогающими спланировать и реализовать переход на Teams. Для оптимального взаимодействия начните с сеанса Планирование перехода ниже. Щелкните любой заголовок семинара, чтобы зарегистрироваться.
   ms.service: msteams
   ms.topic: hub-page
-  author: SerdarSoysal
-  ms.author: serdars
+  ms.author: mikeplum
+  author: MikePlumleyMSFT
   manager: serdars
   ms.date: 01/27/2020
   ms.reviewer: landerl
   audience: admin
   f1.keywords:
-    - NOCSH
+  - NOCSH
   ms.localizationpriority: high
   ms.collection:
-    - Teams_ITAdmin_JourneyFromSfB
-    - M365-collaboration
+  - Teams_ITAdmin_JourneyFromSfB
+  - M365-collaboration
   ms.custom:
-    - seo-marvel-apr2020
+  - seo-marvel-apr2020
   search.appverid: MET150
   appliesto:
-    - Microsoft Teams
+  - Microsoft Teams
+  ms.openlocfilehash: fe5104d2047f734a0ae6df839bb980052ca2607e
+  ms.sourcegitcommit: 4d88637f510a78d5709d1213c3e285d83a022014
+  ms.translationtype: MT
+  ms.contentlocale: ru-RU
+  ms.lasthandoff: 07/14/2022
+  ms.locfileid: "66794527"
 productDirectory:
   items:
-    - title: Планирование перехода (начните отсюда!)
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/get-started-teams.svg'
-      summary: 'Обновление до Teams до выхода из Skype для бизнеса Online (31 июля 2021 г.) или перенос сценариев из локальной среды Skype для бизнеса в Teams— будет успешным как для технических, так и для пользователей. Узнайте о нашей проверенной структуре, лучших методиках и ресурсах, которые помогут вам успешно перейти Teams с Skype для бизнеса Online, Skype для бизнеса Server или гибридной среды. Аудитория — все (спонсоры для бизнеса, ИТ-администраторы, менеджер по готовности и изменениям, руководитель проекта)'
-      url: 'https://aka.ms/SfBtoTeamsPlan'
-    - title: Реализация обновления Teams обновления
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/hybrid-teams.svg'
-      summary: 'Присоединяйтесь к нам, чтобы выявить и подготовиться к выполнению наилучшего технического подхода для перемещения всех рабочих нагрузок в Teams с учетом ваших целей и текущей среды Skype для бизнеса среды. Большинство клиентов, успешно завершивших переходы, включили Teams наряду с текущей Skype для бизнеса Online, Skype для бизнеса Server или гибридной реализацией. В этом сеансе будут делиться ключевыми моментами и полезными ресурсами, которые помогут вам определить наилучшие стратегии миграции для вашей организации. Аудитория — ИТ-администраторы'
-      url: 'https://aka.ms/SfBtoTeamsImplement'
+  - title: Планирование перехода (начните отсюда!)
+    imageSrc: https://docs.microsoft.com/office/media/icons/get-started-teams.svg
+    summary: Независимо от того, выполняете ли вы обновление до Teams до прекращения использования Skype для бизнеса Online (31 июля 2021 г.) или переноса сценариев из локальной среды Skype для бизнеса в Teams, успешный переход решает как техническую, так и пользовательальную готовность. Ознакомьтесь с проверенной платформой, рекомендациями и ресурсами, которые помогут вам успешно перейти на Teams с Skype для бизнеса Online, Skype для бизнеса Server или гибридной среды. Аудитория — все (спонсоры для бизнеса, ИТ-администраторы, готовность пользователей или руководитель изменений, руководитель проекта)
+    url: https://aka.ms/SfBtoTeamsPlan
+  - title: Реализация обновления Teams
+    imageSrc: https://docs.microsoft.com/office/media/icons/hybrid-teams.svg
+    summary: Присоединяйтесь к нам, чтобы определить и подготовиться к выполнению наилучшего технического подхода для перемещения всех рабочих нагрузок в Teams на основе ваших целей и текущей Skype для бизнеса среды. Большинство клиентов, которые завершили успешные переходы, включили Teams вместе с их текущей Skype для бизнеса Online, Skype для бизнеса Server или гибридной реализации. В этом сеансе будут делиться ключевыми рекомендациями и ценными ресурсами, которые помогут вам определить оптимальную стратегию миграции для вашей организации. Аудитория — ИТ-администраторы
+    url: https://aka.ms/SfBtoTeamsImplement
 additionalContent:
   sections:
-    - items:
-        - title: Расширите Teams сценариев?
-          summary: 'Ознакомьтесь с нашими Teams, на которые вы можете пообщаться с ИТ-специалистов.'
-          url: ./chalk-talks-landing-page.yml
-        - title: Используете Teams впервые?
-          summary: 'Узнайте больше о том, как при Teams.'
-          url: ./teams-overview.md
+  - items:
+    - title: Развертывание сценариев Teams?
+      summary: Ознакомьтесь с нашими семинарами teams Chalk Talk для ИТ-специалистов.
+      url: ./chalk-talks-landing-page.yml
+    - title: Используете Teams впервые?
+      summary: Дополнительные сведения о начале работы с Teams.
+      url: ./teams-overview.md
