--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -454,9 +454,9 @@ items:
           - name: Отчет лицензии для защиты информации Teams
             href: teams-analytics-and-reports/information-protection-license-report.md
           - name: Отчет об использовании виртуальных визитов Teams
-            href: teams-analytics-and-reports/virtual-visits-usage-report.md
+            href: /microsoft-365/frontline/virtual-visits-usage-report?bc=%2fmicrosoftteams%2fbreadcrumb%2ftoc.json&toc=%2fmicrosoftteams%2ftoc.json
           - name: Отчет о виртуальных встречах соединителя EHR Teams
-            href: expand-teams-across-your-org/healthcare/ehr-admin-reports.md
+            href: /microsoft-365/frontline/ehr-connector-report?bc=%2fmicrosoftteams%2fbreadcrumb%2ftoc.json&toc=%2fmicrosoftteams%2ftoc.json
       - name: 'Файлы журнала, работоспособность служб и поддержка'
         items:
           - name: Использование файлов журнала для мониторинга и устранения неполадок в Teams
@@ -1471,6 +1471,8 @@ items:
                 href: devices/phones-displays-deploy.md
               - name: USB-устройства для аудио и видео
                 href: devices/usb-devices.md
+              - name: RealWear для Teams
+                href: flw-realwear.md
               - name: Мониторинг
                 items:
                   - name: Оповещения и мониторинг в Teams
@@ -1507,6 +1509,8 @@ items:
             href: approval-admin.md
           - name: Управление приложением "Смены"
             href: expand-teams-across-your-org/shifts/manage-the-shifts-app-for-your-organization-in-teams.md
+          - name: 'Данные смен: вопросы и ответы'
+            href: expand-teams-across-your-org/shifts/shifts-data-faq.md
           - name: Управление приложением обновления
             href: manage-updates-app.md
       - name: Управление сторонними приложениями
@@ -1550,7 +1554,7 @@ items:
               - name: управлять настраиваемыми политиками и параметрами приложений
                 href: teams-custom-app-policies-and-settings.md
           - name: Настройка приложения Teams для сотрудников без компьютеров
-            href: pin-teams-apps-based-on-license.md
+            href: /microsoft-365/frontline/pin-teams-apps-based-on-license?bc=%2fmicrosoftteams%2fbreadcrumb%2ftoc.json&toc=%2fmicrosoftteams%2ftoc.json
           - name: Разрешения Graph и согласие администратора в Azure AD
             href: app-permissions-admin-center.md
           - name: Управление связанным с конкретными ресурсами согласием для вашей организации
@@ -1571,40 +1575,6 @@ items:
     items:
       - name: Обзор
         href: expand-teams-across-your-org/expand-teams-across-your-organization-landing-page.md
-      - name: Все отрасли
-        items:
-          - name: Bookings в Teams
-            items:
-              - name: Виртуальные встречи с помощью Teams и Bookings
-                href: expand-teams-across-your-org/bookings-virtual-visits.md
-              - name: Управление приложением Bookings
-                href: bookings-app-admin.md
-              - name: Управление возможностями присоединения в мобильных браузерах
-                href: expand-teams-across-your-org/browser-join.md
-              - name: Отчет об использовании виртуальных визитов
-                href: teams-analytics-and-reports/virtual-visits-usage-report.md
-              - name: Помогите своим клиентам использовать виртуальные встречи
-                href: expand-teams-across-your-org/virtual-appointments-toolkit.md
-          - name: '"Смены" для Teams'
-            items:
-              - name: Начало работы с приложением "Смены"
-                href: expand-teams-across-your-org/shifts-for-teams-landing-page.md
-              - name: Управление приложением "Смены"
-                href: expand-teams-across-your-org/shifts/manage-the-shifts-app-for-your-organization-in-teams.md
-              - name: Управление владельцами расписаний для управления сменами
-                href: expand-teams-across-your-org/shifts/schedule-owner-for-shift-management.md
-              - name: Соединители приложения "Смены"
-                items:
-                  - name: Обзор
-                    href: expand-teams-across-your-org/shifts/shifts-connectors.md
-                  - name: Настройка подключения к Blue Yonder WFM с помощью мастера соединителя "Смены"
-                    href: expand-teams-across-your-org/shifts/shifts-connector-wizard.md
-                  - name: Настройка подключения к Blue Yonder WFM с помощью PowerShell
-                    href: expand-teams-across-your-org/shifts/shifts-connector-blue-yonder-powershell-setup.md
-                  - name: Использование PowerShell для управления подключением Смен к Blue Yonder WFM
-                    href: expand-teams-across-your-org/shifts/shifts-connector-powershell-manage.md
-              - name: 'Данные смен: вопросы и ответы'
-                href: expand-teams-across-your-org/shifts/shifts-data-faq.md
       - name: Teams для образования
         href: expand-teams-across-your-org/teams-for-education-landing-page.md
         items:
@@ -1656,28 +1626,8 @@ items:
         items:
           - name: Начало работы с Teams для сотрудников без компьютеров
             href: flw-landing-page.md
-          - name: Запустить пробную версию для сотрудников без компьютеров
-            href: flw-trial.md
-          - name: Варианты лицензирования для сотрудников без компьютеров
-            href: flw-licensing-options.md
-          - name: Краткое руководство по началу работу для сотрудников без компьютеров
-            href: flw-quickstart.yml
-          - name: Мастер подключения сотрудников без компьютеров
-            href: flw-onboarding-wizard.md
-          - name: 'Крупномасштабное развертывание Teams для сотрудников, работающих с клиентами'
-            href: deploy-teams-at-scale.md
-          - name: Настройка приложения Teams для сотрудников без компьютеров
-            href: pin-teams-apps-based-on-license.md
-          - name: Управление приложением "Смены"
-            href: expand-teams-across-your-org/shifts/manage-the-shifts-app-for-your-organization-in-teams.md
-          - name: Управление доступом на основе смен для сотрудников без компьютеров
-            href: expand-teams-across-your-org/shifts/manage-shift-based-access-flw.md
-          - name: Управление владельцами расписаний для управления сменами
-            href: expand-teams-across-your-org/shifts/schedule-owner-for-shift-management.md
-          - name: RealWear для Teams
-            href: flw-realwear.md
-          - name: Walkie Talkie
-            href: walkie-talkie.md
+          - name: Пакеты политик для сотрудников первой линии
+            href: policy-packages-flw.md
       - name: Teams для государственных организаций
         href: expand-teams-across-your-org/teams-for-government-landing-page.md
         items:
@@ -1700,77 +1650,22 @@ items:
       - name: Teams для сферы здравоохранения
         items:
           - name: Начало работы с Teams для сферы здравоохранения
-            href: expand-teams-across-your-org/healthcare/teams-in-hc.md
-          - name: Виртуальные встречи
-            items:
-              - name: Виртуальные встречи с помощью Teams — интеграция с электронными медицинскими картами Cerner
-                href: expand-teams-across-your-org/healthcare/ehr-admin-cerner.md
-              - name: Виртуальные встречи с помощью Teams — интеграция с электронными медицинскими картами Epic
-                href: expand-teams-across-your-org/healthcare/ehr-admin.md
-              - name: Отчет о виртуальных встречах соединителя EHR Teams
-                href: expand-teams-across-your-org/healthcare/ehr-admin-reports.md
-              - name: Виртуальные встречи с помощью Teams и Bookings
-                href: expand-teams-across-your-org/bookings-virtual-visits.md
-              - name: Отчет об использовании виртуальных визитов
-                href: teams-analytics-and-reports/virtual-visits-usage-report.md
-              - name: Управление возможностями присоединения в мобильных браузерах
-                href: expand-teams-across-your-org/browser-join.md
-          - name: Просмотр и назначение пакетов политик
+            href: /microsoft-365/frontline/teams-in-hc?bc=%2fmicrosoftteams%2fbreadcrumb%2ftoc.json&toc=%2fmicrosoftteams%2ftoc.json
+          - name: Пакеты политик для здравоохранения
             href: policy-packages-healthcare.md
-          - name: Безопасный обмен сообщениями
-            items:
-              - name: Безопасный обмен сообщениями
-                href: expand-teams-across-your-org/healthcare/messaging-policies-hc.md
-              - name: Делегирование сообщений
-                href: expand-teams-across-your-org/healthcare/hc-delegates.md
           - name: Использование шаблонов Teams для здравоохранения
             href: expand-teams-across-your-org/healthcare/healthcare-templates-admin-console.md
-          - name: Управление приложением "Утверждения" в Teams
-            href: approval-admin.md
-          - name: Управление приложением Lists
-            href: manage-lists-app.md
-          - name: Управление приложением "Смены"
-            href: expand-teams-across-your-org/shifts/manage-the-shifts-app-for-your-organization-in-teams.md
-          - name: Управление приложением "Задачи"
-            href: manage-tasks-app.md
       - name: Teams для некоммерческих организаций
         href: expand-teams-across-your-org/teams-for-nonprofit-landing-page.md
         items:
           - name: Использование шаблонов команд для некоммерческих организаций
             href: team-templates-nonprofit.md
       - name: Teams для розничной торговли
-        href: expand-teams-across-your-org/teams-for-retail-landing-page.md
         items:
-          - name: Взаимодействие команд розничной торговли
-            href: expand-teams-across-your-org/retail-team-collaboration.md
-          - name: Упрощение бизнес-процессов розничной торговли
-            href: expand-teams-across-your-org/retail-business-processes.md
+          - name: Начало работы с Teams для розничной торговли
+            href: /microsoft-365/frontline/teams-for-retail-landing-page?bc=%2fmicrosoftteams%2fbreadcrumb%2ftoc.json&toc=%2fmicrosoftteams%2ftoc.json
           - name: Использование шаблонов команд розничной торговли
             href: get-started-with-retail-teams-templates.md
-          - name: Мастер подключения сотрудников без компьютеров
-            href: flw-onboarding-wizard.md
-          - name: 'Крупномасштабное развертывание Teams для сотрудников, работающих с клиентами'
-            href: deploy-teams-at-scale.md
-          - name: '"Смены" для Teams'
-            items:
-              - name: '"Смены" для Teams'
-                href: expand-teams-across-your-org/shifts-for-teams-landing-page.md
-              - name: Управление приложением "Смены"
-                href: expand-teams-across-your-org/shifts/manage-the-shifts-app-for-your-organization-in-teams.md
-              - name: Управление доступом на основе смен
-                href: expand-teams-across-your-org/shifts/manage-shift-based-access-flw.md
-          - name: Walkie Talkie
-            href: walkie-talkie.md
-          - name: RealWear
-            href: flw-realwear.md
-          - name: Управление приложением "Благодарность"
-            href: manage-praise-app.md
-          - name: Управление приложением "Задачи"
-            href: manage-tasks-app.md
-          - name: Управление приложением Lists
-            href: manage-lists-app.md
-          - name: Управление приложением "Утверждения" в Teams
-            href: approval-admin.md
   - name: Справочные материалы
     items:
       - name: Ограничения и спецификации для Teams
