commit translated contents

--- a/Teams/Tutorial-Meetings-in-Teams.yml
+++ b/Teams/Tutorial-Meetings-in-Teams.yml
@@ -7,8 +7,8 @@ metadata:
   audience: IT Pro
   level: Intermediate
   displayType: one-column
-  ms.author: serdars
-  author: SerdarSoysal
+  ms.author: mikeplum
+  author: MikePlumleyMSFT
   ms.reviewer: shalenc
   manager: serdars
   ms.service: msteams
@@ -20,12 +20,12 @@ metadata:
   - Teams_ITAdmin_RemoteWorkers
   appliesto:
   - Microsoft Teams
-  ms.openlocfilehash: 3ada1b46f057c4c1f6f7d715c038c78e1e0eecd1
-  ms.sourcegitcommit: 2b1290b763c73f64c84c7568b16962e4ae48acf6
+  ms.openlocfilehash: 101be689ff6fba7facf7a550d3affd31cf423d5a
+  ms.sourcegitcommit: 4c4f2f220832cae3efb3f6f3c74795300d661295
   ms.translationtype: MT
   ms.contentlocale: ru-RU
-  ms.lasthandoff: 06/01/2022
-  ms.locfileid: "65823018"
+  ms.lasthandoff: 07/15/2022
+  ms.locfileid: "66825533"
 items:
 - durationInMinutes: 1
   content: >
@@ -67,7 +67,7 @@ items:
     -   Публикация в разделе комментариев в нижней части страницы "Дальнейшие действия" этого руководства.
 
 
-    Чтобы оставить отзыв о продуктах Teams, например идеи о новых функциях, посетите Teams [отзывов](https://feedbackportal.microsoft.com/feedback/forum/ad198462-1c1c-ec11-b6e7-0022481f8472).
+    Чтобы оставить отзыв о продуктах Teams, например о новых возможностях, посетите портал [отзывов Teams](https://feedbackportal.microsoft.com/feedback/forum/ad198462-1c1c-ec11-b6e7-0022481f8472).
 - title: Собрания в Teams
   durationInMinutes: 16
   content: "\nДля ознакомления с собраниями в Teams см. следующие материалы:\n-   \"Собрания\" в собраниях [и звонках](https://support.office.com/article/Meetings-and-calls-d92432d5-dd0f-4d17-8f69-06096b6b48a8) (предполагаемое время чтения 6 минут)\n\n-   Видео [Незапланированное собрание](https://support.office.com/article/Video-Meet-now-26e06837-853d-4df1-a729-06bf700d4ecf) (1 минута 45 секунд)\n\n-   Видео [Запланированные собрания](https://support.office.com/article/Video-Scheduled-meetings-ba44d0fd-da3c-4541-a3eb-a868f5e2b137) (1 минута 45 секунд)\n\n-   Статья [9 tips for meeting with Microsoft Teams](https://techcommunity.microsoft.com/t5/Microsoft-Teams-Blog/9-tips-for-meeting-with-Microsoft-Teams/ba-p/151444) (9 советов по собраниям в Microsoft Teams), которая познакомит вас с \"залом ожидания\", присоединением к собраниям анонимно и другими возможностями (примерное время чтения: 6 минут)\n"
@@ -108,7 +108,7 @@ items:
 
     2.  Отправьте нам отзыв:
         - Оставьте сообщение в разделе комментариев внизу этой страницы.
-        - Чтобы предоставить нам Teams отзыв о продукте или запросить новую функцию, перейдите [на Teams отзывов](https://feedbackportal.microsoft.com/feedback/forum/ad198462-1c1c-ec11-b6e7-0022481f8472).
+        - Чтобы отправить отзыв о продукте Teams или запросить новую функцию, перейдите на портал [отзывов Teams](https://feedbackportal.microsoft.com/feedback/forum/ad198462-1c1c-ec11-b6e7-0022481f8472).
     3.  Будьте в курсе событий
         - Подпишитесь на [блог Teams](https://aka.ms/teamsblog).
         - Ознакомьтесь с [дорожной картой](https://aka.ms/O365Roadmap) Teams.
