--- a/Teams/chalk-talks-landing-page.yml
+++ b/Teams/chalk-talks-landing-page.yml
@@ -1,66 +1,72 @@
 ### YamlMime:Hub
-title: Microsoft Teams Беседы с мелким хламом
-summary: 'Предназначен для ИТ-специалистов и лиц, принимающих решения, Teams Мелкий беседы предоставляют уникальную возможность изучить рекомендации и практические рекомендации по некоторым из наиболее популярных и привлекательных сценариев в Teams.'
+title: Беседы с Олком в Microsoft Teams
+summary: Для ИТ-специалистов и лиц, принимающих решения, Teams Chalk Talks предоставляет уникальную возможность ознакомиться с рекомендациями и практическими рекомендациями по некоторым из наиболее популярных и привлекательных сценариев в Teams.
 brand: teams
 metadata:
-  title: Microsoft Teams разговоров с мелким
-  description: 'Предназначен для ИТ-специалистов и лиц, принимающих решения, Teams Мелкий беседы предоставляют уникальную возможность изучить рекомендации и практические рекомендации по некоторым из наиболее популярных и привлекательных сценариев в Teams. Эти интерактивные интерактивные семинары, упростив реализацию Teams внедрения и упростив его для конечных пользователей, упростит помощь экспертов. Щелкните название любого совещания ниже, чтобы увидеть доступные даты и время, и зарегистрироваться сегодня!'
+  title: Беседы с использованием хлама в Microsoft Teams
+  description: Для ИТ-специалистов и лиц, принимающих решения, Teams Chalk Talks предоставляет уникальную возможность ознакомиться с рекомендациями и практическими рекомендациями по некоторым из наиболее популярных и привлекательных сценариев в Teams. Эти интерактивные семинары, при помощи экспертов по темам, помогают вам получить аналитические сведения для улучшения реализации Teams и предоставления дополнительных возможностей для конечных пользователей. Щелкните название семинара ниже, чтобы просмотреть доступные даты и время, и зарегистрируйтесь сегодня!
   ms.service: msteams
   ms.topic: hub-page
-  author: SerdarSoysal
-  ms.author: serdars
+  author: MikePlumleyMSFT
+  ms.author: mikeplum
   manager: serdars
   ms.date: 06/17/2020
   ms.reviewer: nsuter
   audience: admin
   f1.keywords:
-    - NOCSH
+  - NOCSH
   ms.localizationpriority: medium
-  ROBOTS: 'NOINDEX, NOFOLLOW'
+  ROBOTS: NOINDEX, NOFOLLOW
   ms.collection:
-    - Teams_ITAdmin_JourneyFromSfB
-    - M365-collaboration
+  - Teams_ITAdmin_JourneyFromSfB
+  - M365-collaboration
   ms.custom:
-    - seo-marvel-apr2020
+  - seo-marvel-apr2020
   search.appverid: MET150
   appliesto:
-    - Microsoft Teams
+  - Microsoft Teams
+  ms.openlocfilehash: 75ccc3c0953df013b2e13868f960a13d10ac13f0
+  ms.sourcegitcommit: 791d0a341ff873145fa893ece05055729b0b8d50
+  ms.translationtype: MT
+  ms.contentlocale: ru-RU
+  ms.lasthandoff: 07/18/2022
+  ms.locfileid: "66838894"
 productDirectory:
-  summary: 'Щелкните название совещания, чтобы зарегистрировать записи по запросу или получить к ним доступ.'
+  summary: Щелкните название семинара, чтобы зарегистрировать записи по запросу или получить доступ к ним.
   items:
-    - title: За качество звука и видео в Teams
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/health-teams.svg'
-      summary: 'Хотите убедиться, что у пользователей есть оптимальный опыт работы с собраниями и голосовой функцией? Мы обсудим инструменты, отчеты и методики, которые помогут вам управлять качеством обслуживания — от разработки заблаговременной стратегии до устранения распространенных проблем.'
-      url: 'https://aka.ms/ChalkTalkAVQuality'
-    - title: Сооо... вы хотите звонить с помощью Teams?
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/headset-teams.svg'
-      summary: 'Присоединитесь к нам, чтобы подробно иронно посмотреть, как добавить возможности звонков по ОКП в Teams развертывания. Вместе мы поимем термины звонков, ключевые понятия и конфигурации.'
-      url: 'https://aka.ms/ChalkTalkCalling'
-    - title: Уравножить трансляции с помощью Microsoft Teams
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/presenter-teams.svg'
-      summary: С помощью крупных виртуальных мероприятий в Интернете вы Microsoft Teams. Изучите методики для успешного проведения мероприятия.
-      url: 'https://aka.ms/ChalkTalksVirtualEvents'
-    - title: Приложения в Teams основы
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/blocks-teams.svg'
-      summary: 'Этот базовый сеанс охватывает основные возможности, включая управление приложениями и безопасность. Узнайте, как интегрировать свои рабочий процессы, приложения для повышения производительности и службы, которые вы используете каждый день, в единый единый процесс.'
-      url: 'https://aka.ms/ChalkTalkApps'
-    - title: Рабочий процесс надстройки с ключом надстройки с приложениями в Teams
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/bandwidth-efficiency-teams.svg'
-      summary: 'Подключение системы, улучшите автоматизацию и улучшите возможности пользователей за счет того, чтобы приложения, на которые использует ваша организация, были Teams.'
-      url: 'https://aka.ms/ChalkTalkKeyApps'
-    - title: 'Расширяйте возможности сотрудников, работающих с frontline, с помощью Teams'
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/devices-2-teams.svg'
-      summary: 'Ознакомьтесь с лучшими методиками планирования и внедрения оптимизированный опыт для продуктивной беседы, обмена информацией и управления расписаниями для сотрудников, работающих с телефоном.'
-      url: 'https://aka.ms/TeamsFLW'
+  - title: Контроль качества звука и видео в Teams
+    imageSrc: https://docs.microsoft.com/office/media/icons/health-teams.svg
+    summary: Хотите обеспечить оптимальное взаимодействие пользователей с собраниями и возможностями голосовой связи? Мы обсудим средства, отчеты и рекомендации по управлению качеством обслуживания — от создания упреждающего стратегии до решения распространенных проблем.
+    url: https://aka.ms/ChalkTalkAVQuality
+  - title: Сооо... Вы хотите совершать звонки с помощью Teams?
+    imageSrc: https://docs.microsoft.com/office/media/icons/headset-teams.svg
+    summary: Присоединяйтесь к нам, чтобы получить подробные сведения о добавлении возможностей звонков по ТСОП в развертывание Teams. Вместе мы рассмотрим терминологию вызовов, основные понятия и конфигурации.
+    url: https://aka.ms/ChalkTalkCalling
+  - title: Energize your Live Events with Microsoft Teams (Energize your Live Events with Microsoft Teams)
+    imageSrc: https://docs.microsoft.com/office/media/icons/presenter-teams.svg
+    summary: Вовлечение и расширение аудитории большими виртуальными событиями в Интернете с помощью Microsoft Teams. Ознакомьтесь с рекомендациями по обеспечению успешности события.
+    url: https://aka.ms/ChalkTalksVirtualEvents
+  - title: Приложения в teams Fundamentals
+    imageSrc: https://docs.microsoft.com/office/media/icons/blocks-teams.svg
+    summary: В этом базовом сеансе описываются основные возможности, включая управление приложениями и безопасность. Узнайте, как интегрировать рабочие процессы, приложения для повышения производительности и службы, которые вы используете каждый день, в единый единый интерфейс.
+    url: https://aka.ms/ChalkTalkApps
+  - title: Рабочие процессы ключа надстройки с приложениями в Teams
+    imageSrc: https://docs.microsoft.com/office/media/icons/bandwidth-efficiency-teams.svg
+    summary: Подключите системы, увеличьте автоматизацию и создайте улучшенные возможности для пользователей, включив приложения, от которых зависит ваша организация, в Teams.
+    url: https://aka.ms/ChalkTalkKeyApps
+  - title: Предоставление сотрудникам frontline возможностей для выполнения дополнительных задач с помощью Teams
+    imageSrc: https://docs.microsoft.com/office/media/icons/devices-2-teams.svg
+    summary: Ознакомьтесь с рекомендациями по планированию и внедрению упрощенного интерфейса для продуктивной беседы, обмена информацией и планирования управления для сотрудников без компьютеров.
+    url: https://aka.ms/TeamsFLW
 additionalContent:
   sections:
-    - items:
-        - title: По-прежнему используете Skype для бизнеса?
-          summary: Ознакомьтесь с серии семинаров по обновлению.
-          url: 'https://aka.ms/upgradeworkshops'
-        - title: Подготовка пользователей
-          summary: Подготовка пользователей с помощью Teams Live Training.
-          url: ./instructor-led-training-teams-landing-page.yml
-        - title: Используете Teams впервые?
-          summary: 'Узнайте больше о том, как при Teams.'
-          url: ./teams-overview.md
+  - items:
+    - title: По-прежнему используете Skype для бизнеса?
+      summary: Ознакомьтесь с нашей серии семинаров по обновлению.
+      url: https://aka.ms/upgradeworkshops
+    - title: Подготовка пользователей
+      summary: Подготовка пользователей к работе с помощью Teams Live Training.
+      url: ./instructor-led-training-teams-landing-page.yml
+    - title: Используете Teams впервые?
+      summary: Дополнительные сведения о начале работы с Teams.
+      url: ./teams-overview.md
