--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -459,8 +459,10 @@ items:
             href: /microsoft-365/frontline/ehr-connector-report?bc=%2fmicrosoftteams%2fbreadcrumb%2ftoc.json&toc=%2fmicrosoftteams%2ftoc.json
       - name: 'Файлы журнала, работоспособность служб и поддержка'
         items:
-          - name: Использование файлов журнала для мониторинга и устранения неполадок в Teams
+          - name: Настройка файлов журналов для мониторинга и устранения неполадок в Teams
             href: log-files.md
+          - name: Журналы браузера и трассировка для Teams
+            href: browser-logs-and-tracing-for-teams.md
           - name: Проверка работоспособности служб для Teams
             href: service-health.md
           - name: Как найти ПИН-код поддержки
@@ -977,6 +979,8 @@ items:
             href: operator-connect-configure.md#set-up-phone-numbers
           - name: Управление номерами телефонов для прямой маршрутизации
             href: direct-routing-enable-users.md#configure-the-phone-number-and-enable-enterprise-voice
+          - name: Лицензирование и управление телефонными номерами
+            href: phone-numbers-licensing-changes.md
       - name: Абонентские группы и маршрутизация
         items:
           - name: Обзор
