--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -1533,14 +1533,18 @@ items:
             href: adobe-acrobat-pdf-viewer-teams.md
           - name: Управление Microsoft 365 и настраиваемыми соединителями
             href: Office-365-custom-connectors.md
-      - name: Управление пользовательскими бизнес-приложениями
+      - name: Управление настраиваемыми приложениями
         items:
+          - name: Управление пользовательскими и загруженными неопубликованными приложениями
+            href: custom-app-overview.md
+          - name: управлять настраиваемыми политиками и параметрами приложений
+            href: teams-custom-app-policies-and-settings.md
+          - name: 'Публикация пользовательских приложений, отправленных с помощью API'
+            href: submit-approve-custom-apps.md
+          - name: 'Публикация пользовательского приложения, отправленного в качестве пакета'
+            href: upload-custom-apps.md
           - name: Управление приложениями Power Platform в центре администрирования Teams
             href: manage-power-platform-apps.md
-          - name: Публикация пользовательских приложений в магазине вашей организации
-            href: submit-approve-custom-apps.md
-          - name: Публикация настраиваемого приложения путем отправки пакета приложений
-            href: upload-custom-apps.md
       - name: Элементы управления администратора для управления приложениями
         items:
           - name: Обзор управления приложениями
@@ -1557,7 +1561,7 @@ items:
                 href: teams-custom-app-policies-and-settings.md
           - name: Настройка приложения Teams для сотрудников без компьютеров
             href: /microsoft-365/frontline/pin-teams-apps-based-on-license?bc=%2fmicrosoftteams%2fbreadcrumb%2ftoc.json&toc=%2fmicrosoftteams%2ftoc.json
-          - name: Разрешения Graph и согласие администратора в Azure AD
+          - name: Обзор разрешений приложений Azure AD и предоставление согласия администратора
             href: app-permissions-admin-center.md
           - name: Управление связанным с конкретными ресурсами согласием для вашей организации
             href: resource-specific-consent.md
